fix: change gap between flex items in lower header

--- a/styles/style.css
+++ b/styles/style.css
@@ -61,7 +61,7 @@ a {
 /* --- HEADER-LOWER --- */
 
 .header-lower {
-  gap: 20px;
+  gap: 32px;
   padding: 72px 0px;
 }
 
